Added java-flags, reference-source-roots, java-compiler-args, compiler-args